tests/data/placebo/test_ec2_modify_groups_action_with_name/ec2.DescribeSecurityGroups_1.json
{
    "status_code": 200,
    "data": {
        "SecurityGroups": [
            {
                "Description": "launch-wizard-2 created 2018-08-08T16:49:55.131-05:00",
                "GroupName": "launch-wizard-2",
                "IpPermissions": [
                    {
                        "FromPort": 22,
                        "IpProtocol": "tcp",
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 22,
                        "UserIdGroupPairs": []
                    }
                ],
                "OwnerId": "644160558196",
                "GroupId": "sg-04a9deb6be02641ed",
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1",
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "UserIdGroupPairs": []
                    }
                ],
                "VpcId": "vpc-d2d616b5"
            }
        ],
        "ResponseMetadata": {
            "RequestId": "9f7408ff-5ec5-4076-89a8-77e93ca1472d",
            "HTTPStatusCode": 200,
            "HTTPHeaders": {
                "content-type": "text/xml;charset=UTF-8",
                "transfer-encoding": "chunked",
                "vary": "Accept-Encoding",
                "date": "Wed, 22 Aug 2018 17:38:31 GMT",
                "server": "AmazonEC2"
            },
            "RetryAttempts": 0
        }
    }
}
