tests/data/placebo/test_ec2_modify_groups_action_with_name/ec2.DescribeSecurityGroups_2.json
{
    "status_code": 200,
    "data": {
        "SecurityGroups": [
            {
                "Description": "launch-wizard-1 created 2018-07-19T12:28:51.928-07:00",
                "GroupName": "launch-wizard-1",
                "IpPermissions": [
                    {
                        "FromPort": 22,
                        "IpProtocol": "tcp",
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 22,
                        "UserIdGroupPairs": []
                    }
                ],
                "OwnerId": "644160558196",
                "GroupId": "sg-077dd14d",
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1",
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "UserIdGroupPairs": []
                    }
                ],
                "VpcId": "vpc-d2d616b5"
            }
        ],
        "ResponseMetadata": {
            "RequestId": "61a0336e-f72c-4600-a793-cd840961a740",
            "HTTPStatusCode": 200,
            "HTTPHeaders": {
                "content-type": "text/xml;charset=UTF-8",
                "transfer-encoding": "chunked",
                "vary": "Accept-Encoding",
                "date": "Wed, 22 Aug 2018 17:38:32 GMT",
                "server": "AmazonEC2"
            },
            "RetryAttempts": 0
        }
    }
}
