tests/data/placebo/test_ec2_modify_groups_action_with_name/ec2.ModifyNetworkInterfaceAttribute_1.json
{
    "status_code": 200,
    "data": {
        "ResponseMetadata": {
            "RequestId": "f42f83d9-70cc-4c9c-8051-4dc6d3f8baad",
            "HTTPStatusCode": 200,
            "HTTPHeaders": {
                "content-type": "text/xml;charset=UTF-8",
                "transfer-encoding": "chunked",
                "vary": "Accept-Encoding",
                "date": "Wed, 17 Oct 2018 20:56:42 GMT",
                "server": "AmazonEC2"
            },
            "RetryAttempts": 0
        }
    }
}
